Compositing : Node Groups do not work correctly #44149

Closed
opened 2015-03-27 02:26:23 +01:00 by Carlo Andreacchio · 10 comments

System Information
Windows 7 x64 GTX580

Blender Version
Broken: 770b109
Worked: c31aae0

Short description of error
Node groups do not work correctly

Exact steps for others to reproduce the error

  1. Open attached blend file
  2. render
  3. wait til it has finished & comped
  4. if it is all white, then it has the bug i am experiencing, if you see the rendered image normally, then the node group worked correctly

nodegroupbug.blend

**System Information** Windows 7 x64 GTX580 **Blender Version** Broken: 770b109 Worked: c31aae0 **Short description of error** Node groups do not work correctly **Exact steps for others to reproduce the error** 1. Open attached blend file 2. render 3. wait til it has finished & comped 4. if it is all white, then it has the bug i am experiencing, if you see the rendered image normally, then the node group worked correctly [nodegroupbug.blend](https://archive.blender.org/developer/F155412/nodegroupbug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Added subscriber: @mont29

Added subscriber: @mont29

Ugh, yes, getting a white result - and even got a crash just trying to add a viewer node (after going in and out of group - tab key)…

Ugh, yes, getting a white result - and even got a crash just trying to add a viewer node (after going in and out of group - tab key)…

Added subscriber: @Sergey

Added subscriber: @Sergey

So, here is how I get it crashing:
*Open the file
*Render (you can even interrupt render after a few tiles if you want)
*Go to node editor
*Enable compo nodes
*instant crash (see asan backtrace below).

P215: #44149

=================================================================
==14381==ERROR: AddressSanitizer: unknown-crash on address 0x62e000138408 at pc 0x4077384 bp 0x7ffcd2fdf6c0 sp 0x7ffcd2fdf6b8
READ of size 44240 at 0x62e000138408 thread T0
    #0 0x4077383 in node_preview_sync /home/i74700deb64/blender/__work__/src/source/blender/blenkernel/intern/node.c:1421
    #1 0x4077715 in BKE_node_preview_sync_tree /home/i74700deb64/blender/__work__/src/source/blender/blenkernel/intern/node.c:1440
    #2 0x43554d6 in local_sync /home/i74700deb64/blender/__work__/src/source/blender/nodes/composite/node_composite_tree.c:134
    #3 0x407ac0c in ntreeLocalSync /home/i74700deb64/blender/__work__/src/source/blender/blenkernel/intern/node.c:2028
    #4 0x22f8914 in compo_updatejob /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_edit.c:211
    #5 0x21a4bd4 in wm_jobs_timer /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_jobs.c:563
    #6 0x21d76b7 in wm_window_timer /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_window.c:1127
    #7 0x21d795e in wm_window_process_events /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_window.c:1160
    #8 0x21757b7 in WM_main /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm.c:484
    #9 0x217350d in main /home/i74700deb64/blender/__work__/src/source/creator/creator.c:1857
    #10 0x7fcad7f90b44 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x21b44)
    #11 0x216de2e (/home/i74700deb64/blender/__work__/build_cmake_dbg/bin/blender+0x216de2e)

0x62e000142ea8 is located 0 bytes to the right of 43688-byte region [0x62e000138400,0x62e000142ea8)
allocated by thread T119 here:
    #0 0x7fcade1bc885 in calloc (/usr/lib/x86_64-linux-gnu/libasan.so.1+0x54885)
    #1 0x4e8c82a in MEM_lockfree_callocN /home/i74700deb64/blender/__work__/src/intern/guardedalloc/intern/mallocn_lockfree_impl.c:286
    #2 0x3c3cd67 in PreviewOperation::initExecution() /home/i74700deb64/blender/__work__/src/source/blender/compositor/operations/COM_PreviewOperation.cpp:72
    #3 0x3b912cf in ExecutionSystem::execute() /home/i74700deb64/blender/__work__/src/source/blender/compositor/intern/COM_ExecutionSystem.cpp:166
    #4 0x3b8feba in COM_execute /home/i74700deb64/blender/__work__/src/source/blender/compositor/intern/COM_compositor.cpp:99
    #5 0x4356235 in ntreeCompositExecTree /home/i74700deb64/blender/__work__/src/source/blender/nodes/composite/node_composite_tree.c:232
    #6 0x22f8d73 in compo_startjob /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_edit.c:252
    #7 0x21a3768 in do_job_thread /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_jobs.c:328
    #8 0x4aaf424 in tslot_thread_start /home/i74700deb64/blender/__work__/src/source/blender/blenlib/intern/threads.c:251
    #9 0x7fcadc6a20a3 in start_thread (/lib/x86_64-linux-gnu/libpthread.so.0+0x80a3)

Thread T119 created by T0 here:
    #0 0x7fcade18bbba in pthread_create (/usr/lib/x86_64-linux-gnu/libasan.so.1+0x23bba)
    #1 0x4aaf530 in BLI_insert_thread /home/i74700deb64/blender/__work__/src/source/blender/blenlib/intern/threads.c:267
    #2 0x21a3ef2 in WM_jobs_start /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_jobs.c:411
    #3 0x22f90be in ED_node_composite_job /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_edit.c:298
    #4 0x23214ab in node_area_refresh /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/space_node.c:558
    #5 0x2e55ea3 in ED_area_do_refresh /home/i74700deb64/blender/__work__/src/source/blender/editors/screen/area.c:146
    #6 0x2185a10 in wm_event_do_notifiers /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:364
    #7 0x21757cf in WM_main /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm.c:490
    #8 0x217350d in main /home/i74700deb64/blender/__work__/src/source/creator/creator.c:1857
    #9 0x7fcad7f90b44 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x21b44)

SUMMARY: AddressSanitizer: unknown-crash /home/i74700deb64/blender/__work__/src/source/blender/blenkernel/intern/node.c:1421 node_preview_sync
Shadow bytes around the buggy address:
  0x0c5c8001f030: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
  0x0c5c8001f040: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
  0x0c5c8001f050: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
  0x0c5c8001f060: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
  0x0c5c8001f070: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
=>0x0c5c8001f080: 00[00]00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x0c5c8001f090: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x0c5c8001f0a0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x0c5c8001f0b0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x0c5c8001f0c0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x0c5c8001f0d0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
Shadow byte legend (one shadow byte represents 8 application bytes):
  Addressable:           00
  Partially addressable: 01 02 03 04 05 06 07 
  Heap left redzone:       fa
  Heap right redzone:      fb
  Freed heap region:       fd
  Stack left redzone:      f1
  Stack mid redzone:       f2
  Stack right redzone:     f3
  Stack partial redzone:   f4
  Stack after return:      f5
  Stack use after scope:   f8
  Global redzone:          f9
  Global init order:       f6
  Poisoned by user:        f7
  Contiguous container OOB:fc
  ASan internal:           fe
==14381==ABORTING

So, here is how I get it crashing: *Open the file *Render (you can even interrupt render after a few tiles if you want) *Go to node editor *Enable compo nodes *instant crash (see asan backtrace below). [P215: #44149](https://archive.blender.org/developer/P215.txt) ``` ================================================================= ==14381==ERROR: AddressSanitizer: unknown-crash on address 0x62e000138408 at pc 0x4077384 bp 0x7ffcd2fdf6c0 sp 0x7ffcd2fdf6b8 READ of size 44240 at 0x62e000138408 thread T0 #0 0x4077383 in node_preview_sync /home/i74700deb64/blender/__work__/src/source/blender/blenkernel/intern/node.c:1421 #1 0x4077715 in BKE_node_preview_sync_tree /home/i74700deb64/blender/__work__/src/source/blender/blenkernel/intern/node.c:1440 #2 0x43554d6 in local_sync /home/i74700deb64/blender/__work__/src/source/blender/nodes/composite/node_composite_tree.c:134 #3 0x407ac0c in ntreeLocalSync /home/i74700deb64/blender/__work__/src/source/blender/blenkernel/intern/node.c:2028 #4 0x22f8914 in compo_updatejob /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_edit.c:211 #5 0x21a4bd4 in wm_jobs_timer /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_jobs.c:563 #6 0x21d76b7 in wm_window_timer /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_window.c:1127 #7 0x21d795e in wm_window_process_events /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_window.c:1160 #8 0x21757b7 in WM_main /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm.c:484 #9 0x217350d in main /home/i74700deb64/blender/__work__/src/source/creator/creator.c:1857 #10 0x7fcad7f90b44 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x21b44) #11 0x216de2e (/home/i74700deb64/blender/__work__/build_cmake_dbg/bin/blender+0x216de2e) 0x62e000142ea8 is located 0 bytes to the right of 43688-byte region [0x62e000138400,0x62e000142ea8) allocated by thread T119 here: #0 0x7fcade1bc885 in calloc (/usr/lib/x86_64-linux-gnu/libasan.so.1+0x54885) #1 0x4e8c82a in MEM_lockfree_callocN /home/i74700deb64/blender/__work__/src/intern/guardedalloc/intern/mallocn_lockfree_impl.c:286 #2 0x3c3cd67 in PreviewOperation::initExecution() /home/i74700deb64/blender/__work__/src/source/blender/compositor/operations/COM_PreviewOperation.cpp:72 #3 0x3b912cf in ExecutionSystem::execute() /home/i74700deb64/blender/__work__/src/source/blender/compositor/intern/COM_ExecutionSystem.cpp:166 #4 0x3b8feba in COM_execute /home/i74700deb64/blender/__work__/src/source/blender/compositor/intern/COM_compositor.cpp:99 #5 0x4356235 in ntreeCompositExecTree /home/i74700deb64/blender/__work__/src/source/blender/nodes/composite/node_composite_tree.c:232 #6 0x22f8d73 in compo_startjob /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_edit.c:252 #7 0x21a3768 in do_job_thread /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_jobs.c:328 #8 0x4aaf424 in tslot_thread_start /home/i74700deb64/blender/__work__/src/source/blender/blenlib/intern/threads.c:251 #9 0x7fcadc6a20a3 in start_thread (/lib/x86_64-linux-gnu/libpthread.so.0+0x80a3) Thread T119 created by T0 here: #0 0x7fcade18bbba in pthread_create (/usr/lib/x86_64-linux-gnu/libasan.so.1+0x23bba) #1 0x4aaf530 in BLI_insert_thread /home/i74700deb64/blender/__work__/src/source/blender/blenlib/intern/threads.c:267 #2 0x21a3ef2 in WM_jobs_start /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_jobs.c:411 #3 0x22f90be in ED_node_composite_job /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/node_edit.c:298 #4 0x23214ab in node_area_refresh /home/i74700deb64/blender/__work__/src/source/blender/editors/space_node/space_node.c:558 #5 0x2e55ea3 in ED_area_do_refresh /home/i74700deb64/blender/__work__/src/source/blender/editors/screen/area.c:146 #6 0x2185a10 in wm_event_do_notifiers /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:364 #7 0x21757cf in WM_main /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm.c:490 #8 0x217350d in main /home/i74700deb64/blender/__work__/src/source/creator/creator.c:1857 #9 0x7fcad7f90b44 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x21b44) SUMMARY: AddressSanitizer: unknown-crash /home/i74700deb64/blender/__work__/src/source/blender/blenkernel/intern/node.c:1421 node_preview_sync Shadow bytes around the buggy address: 0x0c5c8001f030: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa 0x0c5c8001f040: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa 0x0c5c8001f050: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa 0x0c5c8001f060: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa 0x0c5c8001f070: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa =>0x0c5c8001f080: 00[00]00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x0c5c8001f090: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x0c5c8001f0a0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x0c5c8001f0b0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x0c5c8001f0c0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x0c5c8001f0d0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 Shadow byte legend (one shadow byte represents 8 application bytes): Addressable: 00 Partially addressable: 01 02 03 04 05 06 07 Heap left redzone: fa Heap right redzone: fb Freed heap region: fd Stack left redzone: f1 Stack mid redzone: f2 Stack right redzone: f3 Stack partial redzone: f4 Stack after return: f5 Stack use after scope: f8 Global redzone: f9 Global init order: f6 Poisoned by user: f7 Contiguous container OOB:fc ASan internal: fe ==14381==ABORTING ```

This issue was referenced by 8af5390968

This issue was referenced by 8af5390968a1c6971ba2e8b4f7621d4b8344fce8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8af5390968.

Closed by commit 8af5390968.

This issue was referenced by 6410b1bd59

This issue was referenced by 6410b1bd59d8cf54ee619ffef8f8b14d0109b565
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44149
No description provided.