Fix T44149: Compositing : Node Groups do not work correctly

Input constants are to be connected before removing proxies,
otherwise node groups might give totally different result.

This is a regression and to be put into final release.