source/blender/compositor/intern/COM_NodeOperationBuilder.cpp
@@ -101,11 +101,11 @@ void NodeOperationBuilder::convertToOperations(ExecutionSystem *system)
 		}
 	}
 	
+	add_operation_input_constants();
+	
 	resolve_proxies();
 	
 	add_datatype_conversions();
-	
-	add_operation_input_constants();
 	
 	determineResolutions();
 	
